--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2316,85 +2316,144 @@ body {
   padding-bottom: 120px;
   background-image: url("../../../assets/images/susan-yin-647448-unsplash-2000x1335.jpg");
 }
-.cid-r84yqQHAaQ {
+.cid-r8lxmXKBRX {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #f9f9f9;
 }
-.cid-r84yqQHAaQ .card-img {
-  background-color: #fff;
-}
-.cid-r84yqQHAaQ .card-box {
-  padding: 2rem;
-  background-color: #ffffff;
-}
-.cid-r84yqQHAaQ h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-r84yqQHAaQ p {
-  text-align: left;
-}
-.cid-r84yqQHAaQ .mbr-text {
+.cid-r8lxmXKBRX .mbr-section-subtitle {
   color: #767676;
+  font-weight: 300;
 }
-.cid-r84yqQHAaQ .card-wrapper {
+.cid-r8lxmXKBRX .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-r8lxmXKBRX .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
+}
+.cid-r8lxmXKBRX .card-front {
+  z-index: 2;
+  padding: 0;
+  width: 100%;
   height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
+  overflow: hidden;
 }
-.cid-r84yqQHAaQ .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-r8lxmXKBRX .card-front img {
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  max-width: 600px;
 }
-@media (min-width: 992px) {
-  .cid-r84yqQHAaQ .my-col {
-    flex: 0 0 20%;
-    max-width: 20%;
-    padding: 15px;
-    -webkit-flex: 0 0 20%;
+.cid-r8lxmXKBRX .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #0f7699;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-r8lxmXKBRX .card {
+  min-height: 300px;
+}
+.cid-r8lxmXKBRX .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-r8lxmXKBRX .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-r8lxmXKBRX .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-r8lxmXKBRX .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-r8lxmXKBRX H4 {
+  text-align: center;
+}
+.cid-r8lzbgmRVK {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/mbr-1920x1281.jpg");
+}
+.cid-r8lzbgmRVK h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-r8lzbgmRVK p {
+  color: #767676;
+  text-align: left;
+}
+.cid-r8lzbgmRVK .card-img {
+  text-align: left;
+  padding-right: 30px;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  width: auto;
+}
+.cid-r8lzbgmRVK .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+.cid-r8lzbgmRVK .card-title {
+  margin-bottom: 0;
+}
+.cid-r8lzbgmRVK .mbr-crt-title {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-r8lzbgmRVK .media {
+  margin: initial;
+  align-items: center;
+}
+@media (max-width: 300px) {
+  .cid-r8lzbgmRVK .card-img span {
+    font-size: 40px !important;
   }
 }
-.cid-r84yGNllfo {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+.cid-r8lzbgmRVK B {
+  color: #232323;
 }
-.cid-r84yGNllfo .card-img {
-  background-color: #fff;
-}
-.cid-r84yGNllfo .card-box {
-  padding: 2rem;
-  background-color: #ffffff;
-}
-.cid-r84yGNllfo h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-r84yGNllfo p {
-  text-align: left;
-}
-.cid-r84yGNllfo .mbr-text {
-  color: #767676;
-}
-.cid-r84yGNllfo .card-wrapper {
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-r84yGNllfo .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-@media (min-width: 992px) {
-  .cid-r84yGNllfo .my-col {
-    flex: 0 0 20%;
-    max-width: 20%;
-    padding: 15px;
-    -webkit-flex: 0 0 20%;
-  }
+.cid-r8lzbgmRVK P {
+  color: #232323;
 }
 .cid-r859gH9QTg {
   padding-top: 30px;
@@ -3726,5 +3785,500 @@ body {
   width: 100%;
 }
 .cid-r859exZWqj .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-r7YFDRFTAi .navbar {
+  padding: .5rem 0;
+  background: #149dcc;
+  transition: none;
+  min-height: 77px;
+}
+.cid-r7YFDRFTAi .navbar-dropdown.bg-color.transparent.opened {
+  background: #149dcc;
+}
+.cid-r7YFDRFTAi a {
+  font-style: normal;
+}
+.cid-r7YFDRFTAi .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-r7YFDRFTAi .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-r7YFDRFTAi .nav-item:focus,
+.cid-r7YFDRFTAi .nav-link:focus {
+  outline: none;
+}
+.cid-r7YFDRFTAi .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r7YFDRFTAi .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-r7YFDRFTAi .menu-logo {
+  margin-right: auto;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-r7YFDRFTAi .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-r7YFDRFTAi .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-r7YFDRFTAi .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-r7YFDRFTAi .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-r7YFDRFTAi .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-r7YFDRFTAi .dropdown .dropdown-menu {
+  background: #149dcc;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-r7YFDRFTAi .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-r7YFDRFTAi .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-r7YFDRFTAi .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-r7YFDRFTAi .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-r7YFDRFTAi .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-r7YFDRFTAi .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-r7YFDRFTAi button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-r7YFDRFTAi button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-r7YFDRFTAi button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-r7YFDRFTAi button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-r7YFDRFTAi button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r7YFDRFTAi button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r7YFDRFTAi button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-r7YFDRFTAi nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r7YFDRFTAi nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-r7YFDRFTAi nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-r7YFDRFTAi nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r7YFDRFTAi .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r7YFDRFTAi .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.collapsing,
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-r7YFDRFTAi .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-r7YFDRFTAi .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-r7YFDRFTAi .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r7YFDRFTAi .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-r7YFDRFTAi .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-r7YFDRFTAi .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-r7YFDRFTAi .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-r7YFDRFTAi .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r7YFDRFTAi img {
+    height: 3.8rem !important;
+  }
+  .cid-r7YFDRFTAi .btn {
+    display: -webkit-flex;
+  }
+  .cid-r7YFDRFTAi button.navbar-toggler {
+    display: block;
+  }
+  .cid-r7YFDRFTAi .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-r7YFDRFTAi .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse.collapsing,
+  .cid-r7YFDRFTAi .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse.collapsing .navbar-nav,
+  .cid-r7YFDRFTAi .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-r7YFDRFTAi .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse.collapsing .navbar-buttons,
+  .cid-r7YFDRFTAi .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-r7YFDRFTAi .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-r7YFDRFTAi .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-r7YFDRFTAi .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-r7YFDRFTAi .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-r7YFDRFTAi .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-r7YFDRFTAi .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-r7YFDRFTAi .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-r7YFDRFTAi .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-r7YFDRFTAi .nav-link:hover,
+.cid-r7YFDRFTAi .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-r8ltXTSiWb {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
+}
+.cid-r8ludexfRu {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-r8ludexfRu .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-r8ludexfRu .section-text {
+  padding: 2rem 0;
+}
+.cid-r8ludexfRu .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r8ludexfRu .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-r859gH9QTg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-r859gH9QTg .row-links {
+  width: 100%;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r859gH9QTg .social-row {
+  width: 100%;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r859gH9QTg .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+}
+.cid-r859gH9QTg .media-container-row .foot-menu {
+  list-style: none;
+  display: -webkit-flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+  -webkit-justify-content: center;
+  -webkit-flex-wrap: wrap;
+}
+.cid-r859gH9QTg .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-r859gH9QTg .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-r859gH9QTg .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+}
+.cid-r859gH9QTg .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-r859gH9QTg .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-r859gH9QTg .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-r859gH9QTg .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-r859gH9QTg .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-r859gH9QTg .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-r859gH9QTg .media-container-row .row-copirayt p {
   width: 100%;
 }
