--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2316,22 +2316,22 @@ body {
   padding-bottom: 120px;
   background-image: url("../../../assets/images/susan-yin-647448-unsplash-2000x1335.jpg");
 }
-.cid-r8lxmXKBRX {
-  padding-top: 90px;
+.cid-r8lCeWAOZo {
+  padding-top: 60px;
   padding-bottom: 90px;
   background-color: #f9f9f9;
 }
-.cid-r8lxmXKBRX .mbr-section-subtitle {
+.cid-r8lCeWAOZo .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-r8lxmXKBRX .media-container-row {
+.cid-r8lCeWAOZo .media-container-row {
   word-wrap: break-word;
   word-break: break-word;
   align-items: stretch;
   -webkit-align-items: stretch;
 }
-.cid-r8lxmXKBRX .card_cont {
+.cid-r8lCeWAOZo .card_cont {
   -o-transition: all .5s;
   -ms-transition: all .5s;
   -moz-transition: all .5s;
@@ -2348,20 +2348,20 @@ body {
   text-align: center;
   background-color: #eee;
 }
-.cid-r8lxmXKBRX .card-front {
+.cid-r8lCeWAOZo .card-front {
   z-index: 2;
   padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
-.cid-r8lxmXKBRX .card-front img {
+.cid-r8lCeWAOZo .card-front img {
   min-height: 100%;
   min-width: 100%;
   width: auto;
   max-width: 600px;
 }
-.cid-r8lxmXKBRX .card_back {
+.cid-r8lCeWAOZo .card_back {
   width: 100%;
   height: 100%;
   padding: 30px 30px;
@@ -2377,10 +2377,10 @@ body {
   -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 }
-.cid-r8lxmXKBRX .card {
+.cid-r8lCeWAOZo .card {
   min-height: 300px;
 }
-.cid-r8lxmXKBRX .card:hover .card-front {
+.cid-r8lCeWAOZo .card:hover .card-front {
   z-index: 1;
   -o-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
@@ -2388,7 +2388,7 @@ body {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-.cid-r8lxmXKBRX .card:hover .card_back {
+.cid-r8lCeWAOZo .card:hover .card_back {
   z-index: 2;
   -o-transform: rotateY(0deg);
   -ms-transform: rotateY(0deg);
@@ -2396,17 +2396,17 @@ body {
   -webkit-transform: rotateY(0deg);
   transform: rotateY(0deg);
 }
-.cid-r8lxmXKBRX .builderCard .card_back {
+.cid-r8lCeWAOZo .builderCard .card_back {
   border-bottom-left-radius: 100px;
 }
-.cid-r8lxmXKBRX .builderCard .card_cont {
+.cid-r8lCeWAOZo .builderCard .card_cont {
   -o-backface-visibility: hidden;
   -ms-backface-visibility: hidd;
   -moz-backface-visibility: visible;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
-.cid-r8lxmXKBRX H4 {
+.cid-r8lCeWAOZo H4 {
   text-align: center;
 }
 .cid-r8lzbgmRVK {
@@ -4176,31 +4176,31 @@ body {
 .cid-r7YFDRFTAi .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-r8ltXTSiWb {
+.cid-r8lBZyoXxl {
   padding-top: 120px;
   padding-bottom: 120px;
   background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
 }
-.cid-r8ludexfRu {
+.cid-r8lBTlqH9g {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-r8ludexfRu .line {
+.cid-r8lBTlqH9g .line {
   background-color: #149dcc;
   color: #149dcc;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
-.cid-r8ludexfRu .section-text {
+.cid-r8lBTlqH9g .section-text {
   padding: 2rem 0;
 }
-.cid-r8ludexfRu .inner-container {
+.cid-r8lBTlqH9g .inner-container {
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-r8ludexfRu .inner-container {
+  .cid-r8lBTlqH9g .inner-container {
     width: 100% !important;
   }
 }
